test/corpus/message.txt
==================
Message Schema
==================
type PublicKey data[128]
type Time str # ISO 8601

type Department enum {
  ACCOUNTING
  ADMINISTRATION
  CUSTOMER_SERVICE
  DEVELOPMENT

  # Reserved for the CEO
  JSMITH = 99
}

type Address list<str>[4] # street, city, state, country

type Customer struct {
  name: str
  email: str
  address: Address
  orders: list<struct {
    orderId: i64
    quantity: i32
  }>
  metadata: map<str><data>
}

type Employee struct {
  name: str
  email: str
  address: Address
  department: Department
  hireDate: Time
  publicKey: optional<PublicKey>
  metadata: map<str><data>
}

type TerminatedEmployee void

type Person union {Customer | Employee | TerminatedEmployee}
---
    (source_file
      (type_def
        (type_ident)
        (type
          (length
            (integer))))
      (type_def
        (type_ident)
        (type))
      (comment)
      (type_def
        (type_ident)
        (type
          (enum
            (enum_value)
            (enum_value)
            (enum_value)
            (enum_value)
            (comment)
            (enum_value
              (integer)))))
      (type_def
        (type_ident)
        (type
          (type_param
            (type))
          (length
            (integer))))
      (comment)
      (type_def
        (type_ident)
        (type
          (struct
            (struct_field_name)
            (type)
            (struct_field_name)
            (type)
            (struct_field_name)
            (type
              (type_ident))
            (struct_field_name)
            (type
              (type_param
                (type
                  (struct
                    (struct_field_name)
                    (type)
                    (struct_field_name)
                    (type)))))
            (struct_field_name)
            (type
              (type_param
                (type))
              (type_param
                (type))))))
      (type_def
        (type_ident)
        (type
          (struct
            (struct_field_name)
            (type)
            (struct_field_name)
            (type)
            (struct_field_name)
            (type
              (type_ident))
            (struct_field_name)
            (type
              (type_ident))
            (struct_field_name)
            (type
              (type_ident))
            (struct_field_name)
            (type
              (type_param
                (type
                  (type_ident))))
            (struct_field_name)
            (type
              (type_param
                (type))
              (type_param
                (type))))))
      (type_def
        (type_ident)
        (type))
      (type_def
        (type_ident)
        (type
          (union
            (type
              (type_ident))
            (type
              (type_ident))
            (type
              (type_ident))))))
